[package]
name = "tfidf-summarizer"
version = "0.1.0"
description = "Basic tf-idf compute for documents"
edition = "2021"
homepage = ""
readme = "README.md"
keywords = ["nlp", "text-processing"]
categories = ["text-processing"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"